# AxolotlClient-API

./: .env  .env.example  .gitattributes  .gitignore  API.md  Cargo.toml  LICENSE  README.md  api_documentation.md  app.py  build.rs  devenv.nix  devenv.yaml  flake.nix  index.d.ts  index.d.ts.map  index.js  index.js.map  index.ts  package-lock.json  package.json  privacy_policy.md  readme.md  requirements.txt  rustfmt.toml  schema.sql  shell.nix  tsconfig.json  webpack.config.js
.github/: readme.md
.sqlx/: query-00d8b886507ced8fe4652e65eefbf5a47fd49fc985e0137a031bc08bbc130702.json  query-0553d4fe8c0d968587f58f7d05c23dc736740d2eaa125bc05b516cd1a3374086.json  query-0ab2d138dca541f586ca303102a5773beca38ef3713c6ac7263326b16cb7d2d1.json  query-0be1b2d59020921438814b8b9d13d42215084490aea0a8586b1682d966ef7f64.json  query-0e69457fe18f178e32ea1b6f6f5a679208c54f22f371d7c83713d237ec0514fa.json  query-1186fb0d29748f912b89be78a1d7076ad3e07648fc327ec2e1f98eb9df688bd2.json  query-15728b430f3f86cab4e6fa012134352de572130aa6463fd665ece8b28969a4a5.json  query-1b07355a3e2574fe1107d3e27e645cc411277bb96a7930527970e59ec492e942.json  query-1c35f271c0172e8c93667f67f72cbc8c2deeb70969541ede7628afefee511301.json  query-1cdc0fcaca271ac286e96d4afc3749ac31657dfc7f23ac5ab7b7b7aed0c020fe.json  query-24c8540bc49362f829a9730a390ef9fd91c72031e171c582b10abc31ef726702.json  query-2a5c77dfb6f4ee63a3a2586f837d1dc0d02a4ee4a244c3cc3c4446c45337f9b2.json  query-2f9ed062c337355a8bf7c271242c4e8d32a7c9e6c0365a6c5d3e8037fe799d0c.json  query-3562d0ba96a80d52c9d24da56940cbc1437060a603592a8e731d2a99fac3286c.json  query-3960edf2ef7f8e518cb81e4f64b490a54ad3512c3b7f99d76f729f78a8a34873.json  query-3a56669701d993fa18361e2fad162050764eaccec16623df42a289bc9bfb3829.json  query-3bf50d84b80063e71696c7924710494ae9563e77fb56d595c545d77a9ab2bea3.json  query-41fa47cb09cad2c2f7654c21fe0bbeaa7fdb7e17c95c7a253ea5836b3b983680.json  query-4243e9da66d68fb7891b87614acf07d42f19dd3af5b46604049018c58ec9beec.json  query-46b677ee900dc414c692782dfca01dfba9ee5c2d363059b542ae23b5dfe1d9d2.json  query-4f447e7e7d21098ce672cdd2cfe3638d192eb68aba5028f6241efa49fccfdf70.json  query-503de3445a3c2762858d836028534a6c30bea084e820a408ea4a99ec8f61df80.json  query-582dd4822106a598ffe8ab052c5f01aa7be83c934538f7209e4aada33ab7ca82.json  query-5bb6810e91ee22d5c9eaf58289ff20194fc5812af7e2cbf3cd01765a8dbee5ba.json  query-5c5c98ca7477e46320278b8591aa315cdaa3f2f878ac439fe6803dc627a2f58f.json  query-60397d7dd7a7b140137697bc3028e85f1a49a6467eeffdb88e93cd431bacb7e5.json  query-615b9515cc061f39ce7e60c2f6b793986a06e4f961f06da68224257a6c78985a.json  query-6977f46b12003c0678c926310f2ad3a19196a2a61e8fa6571ef44c9766143729.json  query-6bc25a7a8cc43c91abaacd6a07650e30c2bc8782b5252793e6cf979ec30d0ddf.json  query-72328b2f67559ecde0b265c69e0bc9631b1517c22211561440fd078af5ca708c.json  query-761f2c7be4b391f690f2ae40b2a577bbb767564a119977ec4f16481b9d53df9a.json  query-77c4dd376b3413786eb805db01fa37e32fb7fe640d102cd97b4b3f1cece8765a.json  query-79ae45a48e5bd86a9e74c2dc28747891d5132f182b96236e1f4ba004d1a36171.json  query-7af8057f1030062bf63e2fec6ecaeb8b930196c53f89bcbe0582114842360ace.json  (+45 more)
database/: index.ts  mikro-orm.config.ts
docs/: api_documentation.md  (+2 more)
(+228 files in other folders)
